Softened new message divider, improved contrast, resolve inconsistent hex color casing in prior commit

--- a/betterdiscord/theme.css
+++ b/betterdiscord/theme.css
@@ -111,17 +111,18 @@
 
 /* Recolor new message divider */
 #---new-messages-bar {
-  border-color: #FF00FF
+  border-color: #FF99FF
 }
 #---new-messages-bar > span {
-  background-color: #FF00FF
+  background-color: #FF99FF;
+  color: #000000;
 }
 #---new-messages-bar > span > svg > path {
-  color: #FF00FF !important;
-  fill: #FF00FF !important;
+  color: #FF99FF !important;
+  fill: #FF99FF !important;
 }
 #---new-messages-bar > span.content-1o0f9g {
-  color: #FFFFFF;
+  color: #000000 !important;
 }
 
 /* Brighten spoiler boxes */
@@ -134,7 +135,7 @@
   background: #181818;
 }
 
-/* Restore pink to booster badge */
+/* Restore pink to booster badges */
 .premiumIcon-1rDbWQ.icon-1A2_vz {
   color: #FF73FA !important;
 }
